# Strukturno

./: README.md
Datoteki/: CMakeLists.txt  Ispitna_1.cpp  aud_zad_1.cpp  aud_zad_2.cpp
Labs/: CMakeLists.txt  Lab3ta_Neresena.cpp  main.cpp  test.cpp  zad1.cpp  zad10.cpp  zad10_Real.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad17.cpp  zad1_If_else.cpp  zad2.cpp  zad2_If_else.cpp  zad3.cpp  zad30.cpp  zad3_If_else.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp  zad9_Real.cpp
Labs/Lab_10/: str_zad_1.cpp  str_zad_2.cpp
Labs/Lab_3/: zad1.cpp  zad2.cpp  zad3.cpp
Labs/Lab_4/: zad_1.cpp  zad_2.cpp  zad_3.cpp
Labs/Lab_5/: zad_1.cpp  zad_2.cpp
Labs/Lab_6/: zad_1.cpp  zad_2.cpp  zad_3.cpp
Labs/Lab_7/: matrici_zad1.cpp  matrici_zad2.cpp
Labs/Lab_8/: rek_zad_1.cpp  rek_zad_2.cpp  rek_zad_3.cpp
Labs/Lab_9/: pok_zad_1.cpp  pok_zad_2.cpp  pok_zad_3.cpp
Prv_Kolokvium/: CMakeLists.txt  CikCak.cpp  CikCak_Vtora.cpp  Delitel.cpp  InteresenBroj.cpp  KvadratnaSlika.cpp  MaksimalnaVrednostNa5Cifri.cpp  ParenEkvivalenten.cpp  ParoviOdBroevi.cpp  PodredenBroj.cpp  Pogodok.cpp  SkrieniBroevi.cpp  TotalnoRazlicen.cpp  ZbirNaCifraSoMaksVrednost.cpp  main.cpp  test.cpp
Strings/: CMakeLists.txt  aud_zad_1.cpp  aud_zad_2.cpp  aud_zad_3.cpp  aud_zad_4.cpp  aud_zad_5.cpp  aud_zad_6.cpp  aud_zad_7.cpp  main.cpp
Vtor_Kol/: CMakeLists.txt  do_zad_2.cpp  dop_zad_1.cpp  dop_zad_10.cpp  dop_zad_11.cpp  dop_zad_12.cpp  dop_zad_3.cpp  dop_zad_4.cpp  dop_zad_5.cpp  dop_zad_6.cpp  dop_zad_7.cpp  dop_zad_8.cpp  dop_zad_9.cpp  test.cpp  zad_1.cpp  zad_10.cpp  zad_11.cpp  zad_12.cpp  zad_13.cpp  zad_14.cpp  zad_15.cpp  zad_16.cpp  zad_17.cpp  zad_18.cpp  zad_19.cpp  zad_2.cpp  zad_3.cpp  zad_4.cpp  zad_5.cpp  zad_7.cpp  zad_8.cpp  zad_9.cpp
