cmake_minimum_required(VERSION 3.24)
project(Labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(Labs main.cpp)

add_executable(zad1 Lab_7/matrici_zad1.cpp)
add_executable(zad2 Lab_3/zad2.cpp)
add_executable(zad3 Lab_3/zad3.cpp)
add_executable(zad4 zad4.cpp)
add_executable(test test.cpp)
add_executable(zad5 zad5.cpp)
add_executable(zad6 zad6.cpp)
add_executable(zad7 zad7.cpp)
add_executable(zad8 zad8.cpp)
add_executable(zad9 zad9.cpp)
add_executable(zad10 zad10.cpp)
add_executable(zad30 zad30.cpp)
add_executable(zad9_Real zad9_Real.cpp)
add_executable(zad10_Real zad10_Real.cpp)
add_executable(zad11 zad11.cpp)
add_executable(zad12 zad12.cpp)
add_executable(zad13 zad13.cpp)
add_executable(zad17 zad17.cpp)
add_executable(zad1_If_else zad1_If_else.cpp)
add_executable(zad2_If_else zad2_If_else.cpp)
add_executable(zad3_If_else zad3_If_else.cpp)

add_executable(Lab3ta_Neresena Lab3ta_Neresena.cpp)
add_executable(zad_1 Lab_6/zad_1.cpp)
add_executable(zad_2 Lab_6/zad_2.cpp)
add_executable(zad_3 Lab_6/zad_3.cpp)

add_executable(matrici_zad1 Lab_7/matrici_zad1.cpp)
add_executable(matrici_zad2 Lab_7/matrici_zad2.cpp)
add_executable(rek_zad_1 Lab_8/rek_zad_1.cpp)
add_executable(rek_zad_2 Lab_8/rek_zad_2.cpp)
add_executable(rek_zad_3 Lab_8/rek_zad_3.cpp)
add_executable(pok_zad_1 Lab_9/pok_zad_1.cpp)
add_executable(pok_zad_2 Lab_9/pok_zad_2.cpp)
add_executable(pok_zad_3 Lab_9/pok_zad_3.cpp)
add_executable(str_zad_1 Lab_10/str_zad_1.cpp)
add_executable(str_zad_2 Lab_10/str_zad_2.cpp)