cmake_minimum_required(VERSION 3.24)
project(Strings)

set(CMAKE_CXX_STANDARD 17)

add_executable(Strings main.cpp)

add_executable(aud_zad_1 aud_zad_1.cpp)
add_executable(aud_zad_2 aud_zad_2.cpp)
add_executable(aud_zad_3 aud_zad_3.cpp)
add_executable(aud_zad_4 aud_zad_4.cpp)
add_executable(aud_zad_5 aud_zad_5.cpp)
add_executable(aud_zad_6 aud_zad_6.cpp)
add_executable(aud_zad_7 aud_zad_7.cpp)