cmake_minimum_required(VERSION 3.24)
project(Vtor_Kol)

set(CMAKE_CXX_STANDARD 17)

add_executable(Vtor_Kol main.cpp)

add_executable(zad_3 zad_3.cpp)
add_executable(zad_4 zad_4.cpp)
add_executable(zad_5 zad_5.cpp)
add_executable(zad_7 zad_7.cpp)
add_executable(zad_9 zad_9.cpp)
add_executable(zad_12 zad_12.cpp)
add_executable(zad_13 zad_13.cpp)
add_executable(zad_14 zad_14.cpp)
add_executable(zad_15 zad_15.cpp)
add_executable(zad_16 zad_16.cpp)
add_executable(zad_17 zad_17.cpp)
add_executable(zad_19 zad_19.cpp)
add_executable(zad_18 zad_18.cpp)
add_executable(dop_zad_1 dop_zad_1.cpp)
add_executable(do_zad_2 do_zad_2.cpp)
add_executable(dop_zad_6 dop_zad_6.cpp)
add_executable(zad_1 zad_1.cpp)
add_executable(zad_2 zad_2.cpp)
add_executable(zad_2_C zad_2_C.c)
add_executable(dop_zad_3 dop_zad_3.cpp)
add_executable(dop_zad_4 dop_zad_4.cpp)
add_executable(dop_zad_5 dop_zad_5.cpp)
add_executable(dop_zad_7 dop_zad_7.cpp)
add_executable(dop_zad_9 dop_zad_9.cpp)
add_executable(dop_zad_10 dop_zad_10.cpp)
add_executable(dop_zad_11 dop_zad_11.cpp)
add_executable(dop_zad_12 dop_zad_12.cpp)
add_executable(zad_8 zad_8.cpp)
add_executable(zad_10 zad_10.cpp)
add_executable(zad_11 zad_11.cpp)
add_executable(test test.cpp)
add_executable(dop_zad_8 dop_zad_8.cpp)